fix z-index for tooltip

--- a/bundles/LayoutsAdminBundle/Resources/sass/_rules.scss
+++ b/bundles/LayoutsAdminBundle/Resources/sass/_rules.scss
@@ -1237,7 +1237,7 @@
             
             /* Position the tooltip text - see examples below! */
             position: absolute;
-            z-index: 1;
+            z-index: 11;
 
             &::after {
                 content: " ";
